@@ -75,8 +75,8 @@
         <row>
           <entry>FLOAT</entry>
           <entry></entry>
-          <entry>incomplete</entry>
-          <entry></entry>
+          <entry>yes</entry>
+          <entry>output matches that of <application>isql</application></entry>
         </row>
         <row>
           <entry>FLOAT(bin_prec)</entry>
